# RigShift

./: .gitignore  Cargo.toml  Transfer-EdgeToChrome.ps1
src/: checkpoint.rs  engine.rs  large_files.rs  main.rs  privacy.rs  registry.rs  scanner.rs  services.rs  startup.rs  uninstaller.rs  universal_checkpoint.rs
